--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,8 +2,11 @@ name: CI/CD for FastAPI on EKS
 
 on:
   push:
-    branches: ["master"]
-  pull_request: ["master"]
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
