--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,50 +1,47 @@
-name: CI/CD for FastAPI on EKS
-
+name: FAST API app deploy to EKS
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
   pull_request:
-    branches:
-      - master
+    branches: [ "master" ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: Set up Kubectl
-      uses: azure/k8s-set-context@v1
+    - name: Install kubectl
+      uses: azure/setup-kubectl@v2.0
       with:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+        version: 'v1.24.0' # default is latest stable
+      id: install
 
-    - name: Set up AWS CLI
-      uses: aws-actions/configure-aws-credentials@v2
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1  # Replace with your AWS region
+        aws-region: ap-south-1
 
-    - name: Build and Push Docker Image
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push docker image to Amazon ECR
+      env:
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REPOSITORY: fastapi-celery
+        IMAGE_TAG: 1.1
       run: |
-        docker build -t your-docker-repo/your-app:latest .
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push your-docker-repo/your-app:latest
+        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name primuslearning
+    
     - name: Deploy to EKS
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.EKS_HOST }}
-        username: ${{ secrets.EKS_USERNAME }}
-        key: ${{ secrets.EKS_SSH_KEY }}
-        script: |
-          kubectl apply -f k8s/your-app-deployment.yaml  # Replace with your Kubernetes deployment YAML file
-          kubectl apply -f k8s/your-app-service.yaml  # Replace with your Kubernetes service YAML file
+      run: |
+        kubectl apply -f fast-api-app-deployment.yaml
+        kubectl apply -f fast-api-app-service.yaml
