--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,16 +16,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # - name: Set up Kubectl
-    #   uses: azure/k8s-set-context@v1
-    #   with:
-    #     kubeconfig: ${{ secrets.KUBE_CONFIG }}
-
-    - name: Install kubectl
-      uses: azure/setup-kubectl@v2.0
+    - name: Set up Kubectl
+      uses: azure/k8s-set-context@v1
       with:
-        version: 'v1.24.0' # default is latest stable
-      id: install
+        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+
+    # - name: Install kubectl
+    #   uses: azure/setup-kubectl@v2.0
+    #   with:
+    #     version: 'v1.24.0' # default is latest stable
+    #   id: install
 
     
 
