--- a/k8s/fast-api-app-service.yaml
+++ b/k8s/fast-api-app-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: your-app-service
+  name: fastapi-celery
 spec:
   selector:
-    app: your-app
+    app: fastapi-celery
   ports:
     - protocol: TCP
       port: 80
