--- a/deployment.yaml
+++ b/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: fastapi-celery
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: fastapi-celery
@@ -15,7 +15,8 @@ spec:
         app: fastapi-celery
     spec:
       containers:
-      - name: rahulecr95
-        image: 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95
-        ports:
-        - containerPort: 8000
+        - name: rahulecr95
+          image: 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95:1.1
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
