--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -1,47 +1,50 @@
-name: Fast API app deploy to EKS
+name: CI/CD for FastAPI deployment on EKS
+
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
-    - name: Install kubectl
-      uses: azure/setup-kubectl@v2.0
+    - name: Set up Kubectl
+      uses: azure/k8s-set-context@v1
       with:
-        version: 'v1.24.0' # default is latest stable
-      id: install
+        kubeconfig: ${{ secrets.KUBE_CONFIG }}
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+    - name: Set up AWS CLI
+      uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
+        aws-region: ap-south1  # Replace with your AWS region
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build, tag, and push docker image to Amazon ECR
-      env:
-        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        REPOSITORY: rahulecr95
-        IMAGE_TAG: 1.1
+    - name: Build and Push Docker Image
       run: |
-        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+        docker build -t rahuldocker95/fastapi-celery:latest .
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker push rahuldocker95/fastapi-celery:latest
 
-    - name: Update kube config
-      run: aws eks update-kubeconfig --name himanshu
-    
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Deploy to EKS
-      run: |
-        kubectl apply -f deployment.yaml
-        kubectl apply -f service.yaml
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EKS_HOST }}
+        username: ${{ secrets.EKS_USERNAME }}
+        key: ${{ secrets.EKS_SSH_KEY }}
+        script: |
+          kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
+          kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
