--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Kubectl
-      uses: appleboy/ssh-action@master
+      uses:  azure/k8s-set-context@v1
       env:
         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       with:
