--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Kubectl
-      uses:  azure/k8s-set-context@v1
+      uses: appleboy/ssh-action@master
       env:
-        KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        kubeconfig: ${{ secrets.KUBE_CONFIG }}
       with:
         args: kubectl get pods
 
