--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -16,17 +16,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-          # - name: Set up Kubectl
-    #   uses: azure/k8s-set-context@v1
-    #   with:
-    #     kubeconfig: ${{ secrets.KUBE_CONFIG }}
-
     - name: Set up Kubectl
       uses: azure/k8s-set-context@v1
-      env:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
       with:
+        kubeconfig: ${{ secrets.KUBE_CONFIG }}
         args: kubectl get pods
+
+    # - name: Set up Kubectl
+    #   uses: azure/k8s-set-context@v1
+    #   env:
+    #     kubeconfig: ${{ secrets.KUBE_CONFIG }}
+    #   with:
+    #     args: kubectl get pods
 
     - name: Set up AWS CLI
       uses: aws-actions/configure-aws-credentials@v2
