--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -6,7 +6,7 @@ on:
       - master
   pull_request:
     branches:
-      - master
+      - master 
 
 jobs:
   build:
@@ -20,7 +20,6 @@ jobs:
       uses: azure/k8s-set-context@v1
       with:
         kubeconfig: ${{ secrets.KUBE_CONFIG }}
-      run: kubectl get pods
 
     - name: Set up AWS CLI
       uses: aws-actions/configure-aws-credentials@v2
@@ -46,6 +45,6 @@ jobs:
         host: ${{ secrets.EKS_HOST }}
         username: ${{ secrets.EKS_USERNAME }}
         key: ${{ secrets.EKS_SSH_KEY }}
-      run: |
-        kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
-        kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
+        script: |
+          kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
+          kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
