--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -18,8 +18,10 @@ jobs:
 
     - name: Set up Kubectl
       uses: azure/k8s-set-context@v1
-      with:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+      run: |
+        cat ${{ secrets.KUBE_CONFIG }}
+      # with:
+      #   kubeconfig: ${{ secrets.KUBE_CONFIG }}
 
     - name: Set up AWS CLI
       uses: aws-actions/configure-aws-credentials@v2
