--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -53,7 +53,8 @@ jobs:
         host: 3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
         username: arn:aws:eks:ap-south-1:185738856137:cluster/himanshu
         password: Rahul95@#
-
+        timeout: 5m
+        
         script: |
           kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
           kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
