--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -63,6 +63,6 @@ jobs:
   #       password: Rahul95@#
   #       timeout: 5m
 
-        script: |
-          kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
-          kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
+        # script: |
+        #   kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
+        #   kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
