--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -35,19 +35,11 @@ jobs:
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker push rahuldocker95/fastapi-celery:latest
 
-    - name: Update kube config
-      run: aws eks update-kubeconfig --name himanshu
-
-    - name: Deploy to EKS
+    - name: Debug GitHub Secrets
       run: |
-        kubectl apply -f k8s/deployment.yaml
-        kubectl apply -f k8s/service.yaml
-
-    # - name: Debug GitHub Secrets
-    #   run: |
-    #     echo "EKS_HOST: ${{ secrets.EKS_HOST }}"
-    #     echo "EKS_USERNAME: ${{ secrets.EKS_USERNAME }}"
-    #     echo "EKS_SSH_KEY: ${{ secrets.EKS_SSH_KEY }}"
+        echo "EKS_HOST: ${{ secrets.EKS_HOST }}"
+        echo "EKS_USERNAME: ${{ secrets.EKS_USERNAME }}"
+        echo "EKS_SSH_KEY: ${{ secrets.EKS_SSH_KEY }}"
 
 
   # deploy:
@@ -62,7 +54,29 @@ jobs:
   #       username: arn:aws:eks:ap-south-1:185738856137:cluster/himanshu
   #       password: Rahul95@#
   #       timeout: 5m
+        
+  #       script: |
+  #         kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
+  #         kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
 
-        # script: |
-        #   kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
-        #   kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Deploy to EKS
+      uses: appleboy/ssh-action@master
+      with:
+        host: https://3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
+        username: arn:aws:eks:ap-south-1:185738856137:cluster/himanshu
+        key: Rahul95@#
+        script: |
+          # Pull the Docker image from Docker Hub
+          docker pull rahuldocker95/fastapi-celery:latest
+
+          # Set the Kubernetes context
+          kubectl config use-context himanshu
+
+          # Apply the Kubernetes deployment and service configurations
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
