--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -67,9 +67,10 @@ jobs:
     - name: Deploy to EKS
       uses: appleboy/ssh-action@master
       with:
-        host: https://3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
-        username: arn:aws:eks:ap-south-1:185738856137:cluster/himanshu
-        key: Rahul95@#
+        host: ${{ secrets.EKS_HOST }}
+        username: ${{ secrets.EKS_USERNAME }}
+        key: ${{ secrets.EKS_SSH_KEY }}
+        
         script: |
           # Pull the Docker image from Docker Hub
           docker pull rahuldocker95/fastapi-celery:latest
