--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -41,6 +41,12 @@ jobs:
         echo "EKS_USERNAME: ${{ secrets.EKS_USERNAME }}"
         echo "EKS_SSH_KEY: ${{ secrets.EKS_SSH_KEY }}"
 
+      - name: Debug GitHub Secrets
+      run: |
+        echo "EKS_HOST: ${{ secrets.EKS_HOST }}"
+        echo "EKS_USERNAME: ${{ secrets.EKS_USERNAME }}"
+        echo "EKS_SSH_KEY: ${{ secrets.EKS_SSH_KEY }}"
+
 
   # deploy:
   #   needs: build
