--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Deploy to EKS
       uses:  actions/checkout@v2
       with:
-        host: 3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
+        host: https://3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
         username: himanshu
         password: Rahul95@#
 
