--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -66,7 +66,7 @@ jobs:
 
     steps:
     - name: Deploy to EKS
-      uses:  appleboy/ssh-action@master
+      uses:  actions/checkout@v2
       with:
         host: https://3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
         username: himanshu
