--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -33,15 +33,7 @@ jobs:
       run: |
         docker build -t rahuldocker95/fastapi-celery:latest .
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push rahuldocker95/fastapi-celery:latest
-
-    - name: Debug GitHub Secrets
-      run: |
-        echo "EKS_HOST: ${{ secrets.EKS_HOST }}"
-        echo "EKS_USERNAME: ${{ secrets.EKS_USERNAME }}"
-        echo "EKS_SSH_KEY: ${{ secrets.EKS_SSH_KEY }}"
-
-
+        docker push 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95
 
   # deploy:
   #   needs: build
@@ -60,20 +52,20 @@ jobs:
   #         kubectl apply -f k8s/deployment.yaml  # Replace with your Kubernetes deployment YAML file
   #         kubectl apply -f k8s/service.yaml  # Replace with your Kubernetes service YAML file
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Deploy to EKS
-      uses:  actions/checkout@v2
-      with:
-        host: https://3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
-        username: himanshu
-        password: Rahul95@#
+  #   steps:
+  #   - name: Deploy to EKS
+  #     uses:  actions/checkout@v2
+  #     with:
+  #       host: https://3921C0ED7B9F0E602D4D97C7BB570B15.gr7.ap-south-1.eks.amazonaws.com
+  #       username: himanshu
+  #       password: Rahul95@#
 
-        script: |
-          docker pull rahuldocker95/fastapi-celery:latest
-          kubectl config use-context himanshu
-          kubectl apply -f ./k8s/deployment.yaml
-          kubectl apply -f ./k8s/service.yaml
+  #       script: |
+  #         docker pull rahuldocker95/fastapi-celery:latest
+  #         kubectl config use-context himanshu
+  #         kubectl apply -f ./k8s/deployment.yaml
+  #         kubectl apply -f ./k8s/service.yaml
