--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -30,12 +30,12 @@ jobs:
         aws-region: ap-south-1  # Replace with your AWS region
 
     - name: Login to Amazon ECR
-      run: aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com
+      run: aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 185738856137.dkr.ecr.ap-south-1.amazonaws.com
 
     - name: Build and Push Docker Image to ECR
       run: |
-        docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com/fastapi-celery:latest .
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com/fastapi-celery:latest
+        docker build -t 185738856137.dkr.ecr.ap-south-1.amazonaws.com/fastapi-celery:latest .
+        docker push 185738856137.dkr.ecr.ap-south-1.amazonaws.com/fastapi-celery:latest
 
 
   # deploy:
