--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -1,12 +1,9 @@
-name: CI/CD for FastAPI deployment on EKS
+name: Build and Push Docker Image to ECR
 
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master 
+      - main
 
 jobs:
   build:
@@ -14,32 +11,19 @@ jobs:
     environment: FAST_API_DEPLOYMENT
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Kubectl
-      uses: azure/k8s-set-context@v1
-      with:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
 
-    - name: Set up AWS CLI
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1  # Replace with your AWS region
-
-    - name: Build and Push Docker Image
-      run: |
-        docker build -t rahuldocker95/fastapi-celery:latest .
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push rahuldocker95/fastapi-celery:latest
-
-    - name: Tag Docker image
-      run: |
-        docker tag rahuldocker95/fastapi-celery:latest 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/fastapi-celery:latest
-
-
-    - name: Push Docker image to Amazon ECR
-      run: |
-        docker push 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/fastapi-celery:latest
+      - name: Build and push Docker image
+        run: |
+          docker build -t 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/rahulecr95:$GITHUB_SHA .
+          echo "Pushing image to ECR..."
+          docker push 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/rahulecr95:$GITHUB_SHA
+          echo "::set-output name=image::185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/rahulecr95:$GITHUB_SHA"
