--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -3,8 +3,7 @@ name: Build and Push Docker Image to ECR
 on:
   push:
     branches:
-      - main
-# 
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
