--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -24,5 +24,7 @@ jobs:
         run: |
           docker build -t 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/rahulecr95:$GITHUB_SHA .
           echo "Pushing image to ECR..."
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95
           docker push 185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/rahulecr95:$GITHUB_SHA
-          echo "::set-output name=image::185738856137.dkr.ecr.ap-south-1.amazonaws.com/rahulecr95/rahulecr95:$GITHUB_SHA"
